# recommendme

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: tmpc5cre9mm.csv.json  tmpzmg_bzvi.csv.json
embeddings/: sample.json_id_map.json
recommendme/: __init__.py  data_loader.py  embeddings.py  search.py  utils.py
recommendme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_embedding.py  test_loader.py
